HSEARCH-5401 Test against JDK 26